--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,10 +1,10 @@
 FROM ubuntu:18.04
 RUN apt-get update
-RUN apt-get install curl
-RUN apt-get install python3
-RUN apt-get install python3-pip
-RUN apt-get install vim
-RUN apt-get install git
+RUN apt-get -y install curl
+RUN apt-get install -qy python3
+RUN apt-get install -qy python3-pip
+RUN apt-get install -qy vim
+RUN apt-get -y install git
 RUN git clone https://github.com/Darman09/Big_Data_DAHLEM_Romain_M2_IOT.git
 WORKDIR /Docker
 ADD . /workspace
