Test run jupyter notebook

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,18 +1,29 @@
 FROM ubuntu:18.04
-RUN apt-get update
-RUN apt-get -y install curl
-RUN apt-get install -qy python3
-RUN apt-get install -qy python3-pip
-RUN apt-get install -qy vim
+# Dependencies Install
+RUN apt-get update  && \
+	apt-get -y install curl \
+	apt-get -y install curl \
+	apt-get install -qy python3 \
+	apt-get install -qy python3-pip \
+	apt-get install -qy vim \ 
+	apt-get -y install git
+
+# Install Git
 RUN apt-get -y install git
+
+# Clone git repo
 RUN git clone https://github.com/Darman09/Big_Data_DAHLEM_Romain_M2_IOT.git
+
 WORKDIR /Docker
 ADD . /workspace
 WORKDIR /workspace
-RUN pip3 freeze > requirements.txt
-RUN pip3 install -r requirements.txt
 
-RUN pip3 install jupyter
+RUN pip3 freeze > requirements.txt \
+	pip3 install -r requirements.txt \
+	pip3 install jupyter
 
+# Expoe 8000 Port
 EXPOSE 8000
-CMD workspace --port 8000
+
+# Run jupyter
+CMD jupyter-notebook --no-browser --port=8000
