C'est mieux avec des &

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,11 +1,11 @@
 FROM ubuntu:18.04
 # Dependencies Install
 RUN apt-get update  && \
-	apt-get -y install curl \
-	apt-get -y install curl \
-	apt-get install -qy python3 \
-	apt-get install -qy python3-pip \
-	apt-get install -qy vim \ 
+	apt-get -y install curl && \
+	apt-get -y install curl && \
+	apt-get install -qy python3 && \
+	apt-get install -qy python3-pip && \
+	apt-get install -qy vim && \
 	apt-get -y install git
 
 # Install Git
@@ -18,8 +18,8 @@ WORKDIR /Docker
 ADD . /workspace
 WORKDIR /workspace
 
-RUN pip3 freeze > requirements.txt \
-	pip3 install -r requirements.txt \
+RUN pip3 freeze > requirements.txt && \
+	pip3 install -r requirements.txt && \
 	pip3 install jupyter
 
 # Expoe 8000 Port
