--- a/Docker/Dockerfile_Ex1
+++ b/Docker/Dockerfile_Ex1
@@ -10,20 +10,23 @@ RUN apt-get update  && \
 # Install Git
 RUN apt-get -y install git
 
+
+WORKDIR /Docker
+ADD . /workspace
 WORKDIR /workspace
 
 # Clone git repo
 RUN git clone https://github.com/Darman09/Big_Data_DAHLEM_Romain_M2_IOT.git
 
-WORKDIR /Big_Data_DAHLEM_Romain_M2_IOT/Docker
-
-RUN pip3 install -r requirements.txt
-
-WORKDIR /Big_Data_DAHLEM_Romain_M2_IOT/Flask
+RUN pip3 freeze > requirements.txt && \
+	pip3 install -r requirements.txt && \
+	pip3 install jupyter
+	pip3 install numpy
+	pip3 install Flask
 
 # Expoe 8000 Port
 EXPOSE 8000
 
 # Go to workspace
 # CMD workspace --port 8000
-CMD ["python",".\Hello_World.py"]
+CMD ["jupyter", "notebook", "--port=8888", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
