--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -17,7 +17,7 @@ RUN git clone https://github.com/Darman09/Big_Data_DAHLEM_Romain_M2_IOT.git
 
 WORKDIR /Big_Data_DAHLEM_Romain_M2_IOT/Docker
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install -r /Big_Data_DAHLEM_Romain_M2_IOT/Docker/requirements.txt
 
 WORKDIR /Big_Data_DAHLEM_Romain_M2_IOT/Flask
 
